deployment/kubernetes/02-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jarvis-api
spec:
  replicas: 2
  selector:
    matchLabels:
      name: jarvis-api
  template:
    metadata:
      labels:
        name: jarvis-api
    spec:
      containers:
      - name: application
        image: samwang0723/jarvis-api:latest
        imagePullPolicy: Always
        ports:
        - name: rest-api-port
          containerPort: 8080
        - name: grpc-port
          containerPort: 8081
        - name: mysql-port
          containerPort: 3306
        # define a liveness probe that checks every 5 seconds, starting after 5 seconds
        livenessProbe:
          httpGet:
            path: /live
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
        # define a readiness probe that checks every 5 seconds
        readinessProbe:
          httpGet:
            path: /ready
            port: 8080
          periodSeconds: 5
