deployment/kubernetes/05-api-service.yml
---
apiVersion: v1
kind: Service
metadata:
  namespace: development
  name: jarvis-service
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: jarvis-api
