deployment/kubernetes/06-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: development
  name: jarvis-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: api.jarvis-stockexpert.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: jarvis-service
              port:
                number: 8080
